# better-service-base

./: .coderabbit.yaml  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.types  LICENSE  README.md  SECURITY.md  bin.js  entrypoint.js  entrypoint.sh  generateConfigDefinition.js  generatePackageLinks.js  generatePluginData.js  install-plugin.js  install.js  llms.txt  nodemon.json  package-lock.json  package.json  plugin-stats.json  plugins.json  postinstall.js  repomix.sh  repos.config.json  tsconfig.json  tslint.json  version.txt
.github/: dependabot.yml
.vuepress/: config.ts
Config/: README.md
Development/: README.md
Events/: README.md
Logging/: README.md
Plugins/: README.md
development/: nodemon.json
docker/: BSB.DockerFile  BSB_DockerFile  Core.DockerFile  Core_DockerFile  DockerFile  nginx.types.conf
docs/: .gitignore  Dockerfile  README.md  build.bat  build.sh  healthcheck-nginx.sh  llms.txt  package.json  (+4 more)
python/: .gitignore  Dockerfile  PORT_PLAN.md  README.md  bsb-plugin.json  pyproject.toml  sec-config.json
python/lib/schemas/: config-default.json  events-default.json  service-default0.json
python/src/bsb/: __init__.py  base.py  cli.py  client_generator.py  config_controller.py  events_controller.py  interfaces.py  main.py  observable.py  plugin_loader.py  registry_client.py  schema.py  schema_events.py  schema_export.py  service_base.py  services_controller.py
python/src/bsb/plugins/: __init__.py  config_default.py  events_default.py  service_default0.py
python/tests/: test_build_and_clients.py  test_schema.py  test_service_base.py
(+729 files in other folders)
