[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "service-base"
version = "0.1.0"
description = "Python port of Better Service Base runtime"
requires-python = ">=3.11"
dependencies = ["anyvali>=0.0.5", "PyYAML>=6.0.0"]

[project.scripts]
bsb = "bsb.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9.0.3"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
